# Zepyr_RTOS_Embedded_Component_Framework

./: CMakeLists.txt  LICENSE  README.md  prj.conf  sample.yaml
src/: main.cpp
src/application/: main_application.cpp  main_application.hpp
src/components/: Altimeter.cpp  Altimeter.hpp  Monitor.hpp  TEMP.hpp
src/drivers/: gpio.hpp
src/event/: event.hpp  messages.hpp
src/interface/: led_application.cpp  led_application.hpp
src/thread_component/: component_base.hpp
